# building-ai-agents-nov2025

./: README.md
solutions/Exercise_1/: how_to_llamafile.md
solutions/Exercise_2/: __init__.py  agent.py  config.py  example_agent.md  pyproject.toml  web_app.py
solutions/Exercise_2/templates/: index.html
solutions/Exercise_2/tests/: test_agent_unit.py  test_web_app.py
solutions/Exercise_3/: benchmark.py  e2e_test.py  test_and_benchmark.md  test_cases.json
workshop/: README.md
